// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components > Random > Pure renders different store states when isLoading=false && hasError=false && isFulfilled=false 1`] = `
<DocumentFragment>
  <div
    class="sc-gtssRu evpqoY"
  >
    <h1
      class="sc-dlnjPT bgFMnT"
    >
      some header
    </h1>
    <button
      class="sc-bdnylx lolljv"
      type="button"
    >
      some label
    </button>
    <div>
      some actionLabel
    </div>
  </div>
</DocumentFragment>
`;

exports[`components > Random > Pure renders different store states when isLoading=false && hasError=false && isFulfilled=true 1`] = `
<DocumentFragment>
  <div
    class="sc-gtssRu evpqoY"
  >
    <h1
      class="sc-dlnjPT bgFMnT"
    >
      some header
    </h1>
    <button
      class="sc-bdnylx lolljv"
      type="button"
    >
      some label
    </button>
    <div>
      Retrieved: 
      <tt>
        555
      </tt>
    </div>
  </div>
</DocumentFragment>
`;

exports[`components > Random > Pure renders different store states when isLoading=false && hasError=true && isFulfilled=false 1`] = `
<DocumentFragment>
  <div
    class="sc-gtssRu evpqoY"
  >
    <h1
      class="sc-dlnjPT bgFMnT"
    >
      some header
    </h1>
    <button
      class="sc-bdnylx lolljv"
      type="button"
    >
      some label
    </button>
    <div>
      Error: Could not retrieve a random number
    </div>
  </div>
</DocumentFragment>
`;

exports[`components > Random > Pure renders different store states when isLoading=true && hasError=false && isFulfilled=false 1`] = `
<DocumentFragment>
  <div
    class="sc-gtssRu evpqoY"
  >
    <h1
      class="sc-dlnjPT bgFMnT"
    >
      some header
    </h1>
    <button
      class="sc-bdnylx lolljv"
      disabled=""
      type="button"
    >
      some label
    </button>
    <div>
      some loadingLabel
    </div>
  </div>
</DocumentFragment>
`;
